[gd_scene load_steps=9 format=3 uid="uid://bcxl81ssuov36"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_82dfv"]
[ext_resource type="FontFile" uid="uid://djxb0r8wjpbay" path="res://assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="1_hko3u"]
[ext_resource type="Texture2D" uid="uid://c6korb5qdka3x" path="res://assets/brackeys_platformer_assets/sprites/fruit.png" id="2_tbm5w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovhdq"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhruv"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bc7f"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4bfq"]
atlas = ExtResource("2_tbm5w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8fjj8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4bfq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GameUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_82dfv")

[node name="status" type="MarginContainer" parent="."]
offset_left = 2.0
offset_top = 45.0
offset_right = 496.0
offset_bottom = 256.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="status"]
layout_mode = 2

[node name="HP" type="MarginContainer" parent="status/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="status/VBoxContainer/HP"]
layout_mode = 2

[node name="Label" type="Label" parent="status/VBoxContainer/HP/HBoxContainer"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 35
text = "HP:"
horizontal_alignment = 2

[node name="HP_value_bar" type="ProgressBar" parent="status/VBoxContainer/HP/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_styles/background = SubResource("StyleBoxFlat_ovhdq")
theme_override_styles/fill = SubResource("StyleBoxFlat_dhruv")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="status/VBoxContainer/HP/HBoxContainer/HP_value_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 25
text = "80/100"

[node name="EXP" type="MarginContainer" parent="status/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="status/VBoxContainer/EXP"]
layout_mode = 2

[node name="Label" type="Label" parent="status/VBoxContainer/EXP/HBoxContainer"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 35
text = "EXP:"
horizontal_alignment = 2

[node name="EXP_value_bar" type="ProgressBar" parent="status/VBoxContainer/EXP/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_styles/background = SubResource("StyleBoxFlat_ovhdq")
theme_override_styles/fill = SubResource("StyleBoxFlat_5bc7f")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="status/VBoxContainer/EXP/HBoxContainer/EXP_value_bar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -13.0
offset_right = -15.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 25
text = "LV.30"
horizontal_alignment = 2

[node name="fruit" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 137.0
offset_top = 214.0
offset_right = 230.0
offset_bottom = 254.0
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 35
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="fruit"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2

[node name="Sprite2D" type="AnimatedSprite2D" parent="fruit/Control"]
position = Vector2(-39, -8)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_8fjj8")

[node name="count_down" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="now_round" type="Label" parent="count_down"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.0
offset_top = 40.0
offset_right = 174.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 60
text = "Round 1"
horizontal_alignment = 1

[node name="time_show" type="Label" parent="count_down"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 123.0
offset_right = 44.0
offset_bottom = 174.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_hko3u")
theme_override_font_sizes/font_size = 50
text = "30"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="count_down"]

[connection signal="timeout" from="count_down/Timer" to="." method="_on_timer_timeout"]
